crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_name_nlike.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 3,
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": 5,
        "Title": "Big Ones"
      },
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      },
      {
        "AlbumId": 7,
        "Title": "Facelift"
      },
      {
        "AlbumId": 8,
        "Title": "Warner 25 Anos"
      },
      {
        "AlbumId": 9,
        "Title": "Plays Metallica By Four Cellos"
      },
      {
        "AlbumId": 10,
        "Title": "Audioslave"
      },
      {
        "AlbumId": 11,
        "Title": "Out Of Exile"
      },
      {
        "AlbumId": 12,
        "Title": "BackBeat Soundtrack"
      }
    ]
  }
]
