crates/ndc-sqlserver/tests/snapshots/query_tests__predicates__select_where_variable.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Jota Quest-1995"
      }
    ]
  },
  {
    "rows": []
  },
  {
    "rows": [
      {
        "Title": "Rock In Rio [CD1]"
      },
      {
        "Title": "Rock In Rio [CD2]"
      },
      {
        "Title": "Riot Act"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      },
      {
        "Title": "Garage Inc. (Disc 2)"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Beyond Good And Evil"
      }
    ]
  }
]
